<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sg.edu.nus.baojun.is3261_practice.Calculator">

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal|end"
        android:layout_margin="5dp"
        android:textSize="60sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/all_clear"
            android:onClick="onClick_AllClear"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:onClick="onClick_Clear"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/divide"
            android:onClick="onClick_Operator"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:onClick="onClick_Operator"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:onClick="onClick_Digits"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:onClick="onClick_Digits"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:onClick="onClick_Digits"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/subtract"
            android:onClick="onClick_Operator"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:onClick="onClick_Digits"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:onClick="onClick_Digits"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:onClick="onClick_Digits"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:onClick="onClick_Operator"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/one"
                    android:onClick="onClick_Digits"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/two"
                    android:onClick="onClick_Digits"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/three"
                    android:onClick="onClick_Digits"
                    android:layout_weight="1"/>

            </LinearLayout>

            <Button
                android:id="@+id/button_0"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="onClick_Digits"
                android:text="@string/zero"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equal"
            android:onClick="onClick_Equals"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
