<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sg.edu.nus.baojun.is3261_practice.intent.IntentActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_PassFromMainToNewWithIntent"
        android:text="@string/button_pass_from_main_to_new_intent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_PassFromMainToNewWithBundle"
        android:text="@string/button_pass_from_main_to_new_bundle"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_MainRequestFromNewAndNewPassBackToMain"
        android:text="@string/button_pass_from_new_to_main"/>

</LinearLayout>
